# StarStrike.RTS

./: .dockerignore  .gitignore  ARCHITECTURE.md  ARCHITECTURE_RECOMMENDATIONS.md  Architecture.md  CMakeLists.txt  CMakePresets.json  CODE_STANDARDS.md  CanvasPrompt.md  DirectXMig.md  DockerBuild.cmd  Dockerfile  Folder.DotSettings  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_VALIDATION.md  MathConv.md  README.md  StarStrike.md  StarStrike.sln.DotSettings  StarStrike.slnx  agents.md  priconfig.xml  vcpkg-configuration.json  vcpkg.json
NeuronClient/: Audio.h  AudioCore.cpp  AudioCore.h  AudioDefs.h  AudioEngine.cpp  AudioEngine.h  BitmapFont.cpp  BitmapFont.h  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  CanvasWindow.cpp  ClientNet.cpp  ClientNet.h  ClientSocket.cpp  ClientSocket.h  CmoMesh.cpp  CmoMesh.h  DDSTextureLoader.cpp  DDSTextureLoader.h  DescriptorHeap.cpp  DescriptorHeap.h  EntityCache.cpp  EntityCache.h  FontPrint.cpp  FontPrint.h  FrameUploadAllocator.cpp  FrameUploadAllocator.h  GameMain.h  GpuBuffer.cpp  GpuBuffer.h  GpuResource.h  GraphicsCore.cpp  GraphicsCore.h  GuiWindow.h  InputSystem.cpp  InputSystem.h  MusicTrack.h  (+24 more)
NeuronClient/CompiledShaders/: BasicPS.h  BasicVS.h  CanvasVS.h  SkyBoxPS.h  SkyBoxVS.h  SpritePS.h  SpriteVS.h
NeuronClient/Framework/: Block.c  Block.cpp  Block.h  Cursor.c  Cursor.cpp  Cursor.h  DXInput.c  DXInput.cpp  DXInput.h  Dderror.c  Dderror.cpp  Dderror.h  DdrawCompat.h  Debug.c  Debug.cpp  Debug.h  Font.c  Font.cpp  Font.h  Fractions.h  Frame.c  Frame.cpp  Frame.h  FrameInt.h  FrameResource.c  FrameResource.cpp  FrameResource.h  Framework.dsp  Heap.c  Heap.cpp  Heap.h  Image.c  Image.cpp  Image.h  Input.c  Input.cpp  Input.h  ListMacs.h  Mem.c  Mem.cpp  (+43 more)
NeuronClient/Gamelib/: Ani.h  Anim.c  Anim.cpp  Anim.h  Animobj.c  Animobj.cpp  Animobj.h  GTime.cpp  GTime.h  GameLib.dsp  Hashtabl.c  Hashtabl.cpp  Hashtabl.h  Maxpidef.h  Parser.h  ParserL.c  ParserL.cpp  ParserY.c  ParserY.cpp  Pqueue.c  Pqueue.cpp  Pqueue.h  Priority.h  Ptrlist.c  Ptrlist.cpp  Ptrlist.h
NeuronClient/Netplay/: NetAudio.cpp  NetPlay.dsp  Netcrypt.c  Netcrypt.cpp  Netjoin.cpp  Netlobby.c  Netlobby.cpp  Netplay.c  Netplay.cpp  Netplay.h  Netprov.c  Netprov.cpp  Netprov.h  Netsupp.cpp  Netusers.cpp
NeuronClient/Script/: CodePrint.c  CodePrint.cpp  CodePrint.h  Event.c  Event.cpp  Event.h  EvntSave.c  EvntSave.cpp  EvntSave.h  Interp.c  Interp.cpp  Interp.h  Parse.h  Script.c  Script.cpp  Script.dsp  Script.h  ScriptL.c  ScriptL.cpp  ScriptY.c  ScriptY.cpp  Stack.c  Stack.cpp  Stack.h
NeuronClient/Sequence/: STREAMER.h  Sequence.c  Sequence.dsp
NeuronClient/Shaders/: BasicPS.hlsl  BasicVS.hlsl  SkyBoxPS.hlsl  SkyBoxVS.hlsl  SpriteVS.hlsl
NeuronClient/Sound/: Aud.h  Audio.c  Audio.cpp  Audio.h  EAX.h  Mixer.c  Mixer.cpp  Mixer.h  QMIXER.h  Qstrack.c  Qstrack.cpp  Sound.dsp  Track.c  Track.cpp  Track.h  Tracklib.h
NeuronClient/Widget/: Bar.c  Bar.cpp  Bar.h  Button.c  Button.cpp  Button.h  EditBox.c  EditBox.cpp  EditBox.h  Form.c  Form.cpp  Form.h  Label.c  Label.cpp  Label.h  Slider.c  Slider.cpp  Slider.h  Tip.c  Tip.cpp  Tip.h  WidgBase.h  WidgInt.h  Widget.c  Widget.cpp  Widget.dsp  Widget.h
NeuronClient/ivis02/: 3DfxFunc.c  3DfxFunc.h  3DfxText.c  3DfxText.h  3Dfxdyn.c  3Dfxmode.c  Amd3d.h  BitImage.c  BitImage.cpp  BitImage.h  Bspfunc.h  Bspimd.c  Bspimd.cpp  Bspimd.h  Bug.c  Bug.h  D3dmode.c  D3dmode.h  D3drender.c  D3drender.cpp  D3drender.h  Dglide.h  Dx6TexMan.c  Dx6TexMan.cpp  Dx6TexMan.h  Fbf.c  Fbf.cpp  Fbf.h  Geo.h  Imd.c  Imd.cpp  Imd.h  Imdload.c  Imdload.cpp  Ivi.c  Ivi.cpp  Ivi.h  Ivisdef.h  Ivispatch.h  Pcx.c  (+48 more)
NeuronCore/: ASyncLoader.h  CMakeLists.txt  Constants.h  Debug.h  FileSys.h  FileSystem.h  Hash.h  NetProtocol.h  NeuronCore.c  NeuronCore.cpp  NeuronCore.h  NeuronCore.vcxproj  NeuronCore.vcxproj.filters  PacketCodec.cpp  PacketCodec.h  PacketTypes.h  Socket.cpp  Socket.h  TimerCore.h  Types.h  WorldTypes.h
StarStrike/: AI.c  AI.cpp  AI.h  AIDef.h  AStar.c  AStar.cpp  AStar.h  Action.c  Action.cpp  Action.h  AdvVis.c  AdvVis.cpp  AdvVis.h  Ani.c  AnimId.h  Arrow.c  Arrow.cpp  Atmos.c  Atmos.cpp  Atmos.h  Aud.c  Aud.cpp  AudioId.c  AudioId.cpp  AudioId.h  Base.h  Bridge.c  Bridge.cpp  Bridge.h  Bucket3d.c  Bucket3d.cpp  Bucket3d.h  BuildPos.c  BuildPos.h  Bullet.h  BulletDef.h  CDSpan.c  CMakeLists.txt  Canvas.cpp  Canvas.h  (+386 more)
StarStrike/Assets/: blake.dds  ecm.dds  elitetx3.dds  greendot.dds  missgrn.dds  missred.dds  missyell.dds  reddot.dds  safe.dds  scanner.dds
StarStrike/Assets/Meshes/: Asteroid.cmo  Boa.cmo  CobraFS.cmo  CobraMK3.cmo
StarStrike/Assets/Objects/Asteroids/: asteroid_01.cmo  asteroid_02.cmo  asteroid_03.cmo  asteroid_04.cmo  asteroid_05.cmo  asteroid_06.cmo
StarStrike/Assets/Objects/Hulls/: hull_asteria.cmo  hull_aurora.cmo  hull_avalanche.cmo  hull_avalanche_mk2.cmo  hull_banshee.cmo  hull_banshee_mk2.cmo  hull_boomerang.cmo  hull_crab.cmo  hull_death_bringer.cmo  hull_endeavor.cmo  hull_fang.cmo  hull_freighter.cmo  hull_hammer.cmo  hull_heretic.cmo  hull_hive.cmo  hull_megalisk.cmo  hull_orca.cmo  hull_pest_brown.cmo  hull_pest_red.cmo  hull_pirate_platform.cmo  hull_scarab.cmo  (+9 more)
StarStrike/CompiledShaders/: BasicPS.h  BasicVS.h  CanvasPS.h  CmoPS.h  CmoVS.h  Ship3DPS.h  Ship3DVS.h  SpritePS.h  SpriteVS.h  WorldPS.h  WorldVS.h
StarStrike/Generated Files/: App.xaml.g.h  MainWindow.xaml.g.h  XamlBindingInfo.xaml.g.h  XamlMetaDataProvider.h  XamlTypeInfo.Impl.g.cpp  XamlTypeInfo.xaml.g.h
StarStrike/Rendering/: DX12Renderer.cpp  DX12Renderer.h  ShipRenderer.cpp  ShipRenderer.h  Texture2D.cpp  Texture2D.h
StarStrike/Shaders/: CanvasPS.hlsl  CanvasVS.hlsl  CmoPS.hlsl  CmoVS.hlsl  Ship3DPS.hlsl  Ship3DVS.hlsl  SpritePS.hlsl  WorldPS.hlsl  WorldVS.hlsl
lib/NeuronClient/: Audio.h  CMakeLists.txt  GameMain.h  GraphicsCore.cpp  NeuronClient.cpp
lib/NeuronCore/: CMakeLists.txt  FileSys.cpp  NeuronCore.cpp  Socket.h  Threading.h  pch.h
shared/: CMakeLists.txt  config.h.in  pch.h
shared/include/Neuron/: Timer.h
shared/include/NeuronCore/: Types.h
shared/tests/: VerifyPhase1.cpp
(+6228 files in other folders)
